--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <h3 align="center" id="w">
                 <bold>Welcome!</bold>
             </h3>
-            <p><a href="#Main2Activity" data-role="button" data-transition="flip" class="button1">Get Started</a></p>
-            <p><a href="#Main3Activity" data-role="button" data-transition="flip" class="button1">Register</a></p>
+            <p><a href="#Main2Activity" data-role="button" data-transition="flip" class="button1">Register</a></p>
+            <p><a href="#Main3Activity" data-role="button" data-transition="flip" class="button1">Sign In</a></p>
         </div>
         <!-- /Main -->
 
