--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDmsqDhU4pcWMscll3Ep4Isb99C91NBzWw",
+        authDomain: "prometheus-70c6e.firebaseapp.com",
+        databaseURL: "https://prometheus-70c6e.firebaseio.com",
+        projectId: "prometheus-70c6e",
+        storageBucket: "prometheus-70c6e.appspot.com",
+        messagingSenderId: "678743146036"
+      };
+      firebase.initializeApp(config);
+    </script>
     <style>
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
