--- a/index.html
+++ b/index.html
@@ -672,19 +672,19 @@ thefoodcollector.2017@gmail.com</a>
             </div>
         </div>
         <div role="main" class="ui-content">
-            <h1> <span style="color: #57BC90;">Food Waste Facts</span></h1>
+            <h1> <span style="color: #59B3C2;">Parkinsons' Disease Facts</span></h1>
             <hr/>
-            <p> <strong>Food wastage is leading contributor to Poverty and Environmental issues globally. </strong> </p> 
+            <p> <strong>Parkinson's Disease leading contributor to XXX and XXX issues globally. </strong> </p> 
 <br/>
-<p>According to a 2016 research by the World Hunger Education Services, 1 in 9 people suffer from chronic undernourishment, due to the lack of food. In spite of this, researches from the Food and Agriculture Organisation of the United Nations, show that 1/3 of all our food produce is thrown away, despite a significant portion being edible excess foods. A mere quarter of all wasted foods would be able to feed all the 795 million undernourished from around the world. The wealth disparity and disregard to food wastage constitutes unequal distribution of food. </p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p>The Prometheus tackles world hunger issues, by providing users with a convenient platform to donate Packaged Snacks. By disposing of clean, unwanted packaged foods to our Food Collection Sites (Food Depositories),  users allow us to redistribute such foods to the needy (the undernourished).  </p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p>On the other hand, another dire consequence of Food Wastage is Environmental Harm. Citing the the Food and Agriculture Organisation of the United Nations' 2013 research on Food Wastage Footprint, Food Wastage is the third top carbon dioxide emitter, emitting about 3.3 gigatonnes of CO2. Apart from serious carbon dioxide emission levels, overwhelming amounts of food waste is also the largest component of landfills, which are the second-largest human-related source of methane emission. By regulating the amount of food waste, we directly decrease emission of greenhouse gasses, which in turn eliminates a leading cause of Global Warming.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p>Through partnerships with major housing estates, hotels, NGOs and food-processing companies, we offer weekly truck services to deliver Leftover Foods from estates/hotels to the NGOs/companies. Instead of ending up in landfills, such foods can now be transformed into useful products, such as plant fertilizers and animal feed. This is a direct, environmentally-friendly way of recycling post-consumer foods and eradicate the environmental harm caused, if the foods were to go to waste.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p>The Prometheus is a highly effective solution to both Environmental and Poverty dilemmas caused by Food Wastage. With the Prometheus, everyone, is now empowered to help eradicate the food wastage problem.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div data-role="footer">
             <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
@@ -819,7 +819,7 @@ thefoodcollector.2017@gmail.com</a>
                         <button type="submit" class="subscribe2">Submit</button>
                         <br/>
                     </form>
-                    <p> This form is for Housing Estates, Hotels, NGOs, or other businesses that wish to partner with the Prometheus in Leftover Foods (post-consumer) donations. Please click on the Prometheus icon, or refer to the FAQ page for more details. Please also feel free to Contact Us, should you have any inquiries. </p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
                 </div>
             </div>
             <div data-role="footer">
@@ -879,7 +879,7 @@ thefoodcollector.2017@gmail.com</a>
                         <button type="submit" class="subscribe2">Submit</button>
                         <br/>
                     </form>
-                    <p> This form is for Housing Estates, Hotels, NGOs, or other businesses that wish to partner with the Prometheus in Leftover Foods (post-consumer) donations. Please click on the Prometheus icon, or refer to the FAQ page for more details. Please also feel free to Contact Us, should you have any inquiries. </p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
             <div data-role="footer">
