--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
     <style>
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-
         #map {
             height: 100%;
         }
         /* Optional: Makes the sample page fill the window. */
-
         html,
         body {
             height: 100%;
@@ -154,17 +152,27 @@
             <h3><strong>Credits</strong></h3>
             <br/>
             <label>
+            Shout Outs:
+            </label>
+            <ul>
+                <li>Brian Tang, our regional ambassador who never holds back on giving us valuable resources.</li>
+                <li>Tony Ngan, our mentor and AI expert who's willing to answer even our most idiotic questions.</li>
+                <li>Mrs CP Ho, our school IT teacher who gave valuable insights about our app idea.</li>
+                <li>Jeffrey Hui, our AI and maths expert who freely gave away hours of his time.</li>
+                <li>Professor Wayne Brehaut, Mr Zarreen Naowal Reza, our mentors who kindly accepted our group invitations. </li>
+            </ul>
+            <label>
             Front Image:
             </label>
             <ul>
                 <li>
                     <a href="https://imgur.com/">
-                        Imgur.com
+                        Imgur
                     </a>
                 </li>
                 <li>
                   <a href="https://www.brandcrowd.com/">
-                      BrandCrowd.com
+                      Brand Crowd
                     </a>
                 </li>
             </ul>
@@ -175,7 +183,7 @@
             <ul>
                 <li>
                     <a href="https://www.coursera.org/">
-                        Coursera.org
+                        Coursera
                     </a> 
                 </li>
                 <li>
@@ -184,13 +192,23 @@
                     </a>
                 </li>
                 <li>
-                    <a href="http://feedbackglobal.org/food-waste-scandal/">
-                        FeedBackGlobal.org
+                    <a href="https://stackoverflow.com/">
+                        Stack Overflow
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.theworldcounts.com/stories/Food-Waste-Facts">
-                        TheWorldCounts.com
+                    <a href="https://en.wikipedia.org/wiki/Main_Page">
+                        Wikipedia
+                    </a>
+                </li>
+                <li>
+                    <a href = "https://www.mathworks.com/">
+                        Math Works
+                    </a>
+                </li>
+                <li>
+                    <a href = "https://www.kaggle.com/">
+                        Kaggle
                     </a>
                 </li>
             </ul>
@@ -210,10 +228,6 @@
             <p id="c"> © 2018 Prometheus. All rights reserved. </p>
         </div>
     </div>
-
-
-
-
 
 
 
@@ -774,27 +788,20 @@ prometheuscnn@gmail.com</a>
             </div>
         </div>
         <div role="main" class="ui-content">
-            <h1> <span style="color: #59B3C2;">About Melanoma</span></h1>
+            <h1> <span style="color: #59B3C2;">About our project</span></h1>
             <hr/>
-            <p> <strong>What is Melanoma?</strong> </p> 
+            <p> <strong>Ideation </strong> </p> 
 <br/>
-<p>A type of skin cacer that develops from pigment-containing cells known as melanocytes. Melanoma typically occurs in the skin, but is sometimes found in the mouth, intestines, or eye.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-            <p> <strong>What causes Melanoma?</strong> </p> 
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p>Melanomas are usually caused by DNA damage as a result of exposure to solar UV light, or other UV radiation sources usch as tanning devices. Genetics, strength of immune system, number of moles one already has are all factors of one's risk of being diagnosed for melanoma.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p><strong>What are some symptoms of Melanoma?</strong></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
-<p>Melanoma symptoms are often abbreviated to "ABCDE". "A" refers to asymmetry in moles, "B" referring to irregular moles borders, "C" referring to uneven mole colour distribution, "D" referring to moles with diameters of above 6 mm, and "E" referring to how the mole evolves with time.</div>
-<br/>
-<p><strong>How can I prevent contracting Melanoma?</strong></p>
-<br/>
-<p>As genetics and local climate both play a role in causing melanoma, it is impossible to guarantee being free of melanoma. However, one can lower their risks of contracting through exercising habits such as wearing sunscreen, protective clothing against intense solar UV light, avoiding excessive tanning. It is also crucial to recognise the significance of regular check ups, especially when suspicious looking moles that satisy the melanoma "ABCDE" rule form. </div>
-<p><strong>I have melanoma, what do I do?</strong></p>
-<br/>
-<p>Unlike particular forms of cancer, melanoma skin cancer has a decent 5 yer survival rate, especially when detected at very early stages. If  diagnosed with melanoma, you should cooperate with your doctor in eradicating the risk of melanoma metastasizing through tissue, the lymph system and the blood. Depending on the stage of the melanoma found, treatment methods differ from surgery (for stages 0 till 3), to clinical trials (stages 1 till 3), to chemotherapy (stage 4). In terms of post-diagnosis treatment, good communication and cooperation with your doctor is key to making a full recovery. In case you would like to verify your medical diagnosis of melanoma, you may gain a second opinion via the "Detect melanoma" button on the Prometheus app.</p>
-</div>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
         <div data-role="footer">
             <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
             <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
