--- a/index.html
+++ b/index.html
@@ -716,9 +716,12 @@ prometheuscnn@gmail.com</a>
             </div>
             <div role="main" class="ui-content">
                 <div id="mainform">
-                    <h2 class="green">Please fill in the following form to apply to become a partner of Prometheus!</h2>
+                    <h2 class="green">Please fill out the following form to submit your mole jpeg image for testing!</h2>
                     <form id="form" action="https://formspree.io/prometheuscnn@gmail.com" method="POST">
-                        <h3>Contact Form</h3>
+                        <h3>Form</h3>
+                        <h4>(Due to time constraints, our group was unable to find support to embed our python convolutional neural network for the Prometheus prototype. Thus, we ask users to share email addresses and images through forms. Upon receiving the data, we run the image through our CNN, output a probability, and share the testing results and treatment suggestions to the user's provided email address within the same day.)</h4>   
+                        <h4>In the future, we hope to change the CNN into one that directly trains on the users' web browser. This method would yield near instantaneous results, futher reducing diagnosis time.</h4>         
+
                         <hr/><br/>
                         <label>Name: <span>*</span></label>
                         <br/>
@@ -727,24 +730,15 @@ prometheuscnn@gmail.com</a>
                         <label>Email: <span>*</span></label>
                         <br/>
                         <input id="email" name="email" placeholder=" Your Email" type="email" required/><br/>
-                        <label>Company/ Organisation: <span>*</span></label>
+                        <label>Link to image: <span>*</span></label>
                         <br/>
-                        <input id="company" type="text" placeholder="Your company/ organisation" name="Company/Organisation" required/>
-                        <br/>
-                        <label>Address: <span>*</span></label>
-                        <br/>
-                        <input id="address" name="address" type="text" placeholder="Full address of Company/Organisation" required/><br/>
-                        <label>Company/organisation Webpage:</label>
-                        <br/>
-                        <input id="url" name="url" type="url" placeholder="Webpage address of Company/Organisation (if applicable)" /> <br/>
-                        <label>Message:<span>*</span></label>
+                        <input id="company" type="text" placeholder="Link to image for testing" name="ImageLink" required/>
                         <br/>
                         <textarea id="message" name="message" placeholder="Message......." required></textarea><br/>
                         <br/>
                         <button type="submit" class="subscribe2">Submit</button>
                         <br/>
                     </form>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
                 </div>
             </div>
             <div data-role="footer">
