--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <script>
+  
+<!--     <script>
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyDmsqDhU4pcWMscll3Ep4Isb99C91NBzWw",
@@ -24,16 +25,15 @@
         messagingSenderId: "678743146036"
       };
       firebase.initializeApp(config);
-    </script>
+    </script> -->
+  
     <style>
         /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
-
         #map {
             height: 100%;
         }
         /* Optional: Makes the sample page fill the window. */
-
         html,
         body {
             height: 100%;
@@ -61,7 +61,8 @@
                 <img src="https://i.imgur.com/NgR0PdH.jpg" class="front-pic"/>
             </a>
             <h3 align="center" id="w">
-                <bold>Welcome!</bold>
+<!--                 <bold>Welcome!</bold> -->
+              <a href="tel:85260865057">85260865057</a>
             </h3>
             <p><a href="#detect" data-role="button" data-transition="flip" class="button1">Detect Melanoma</a></p>
             <p><a href="#cure" data-role="button" data-transition="flip" class="button1">Help Cure Cancer</a></p>
