--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <a href="tel:60733637">60733637</a> -->
+
 <!-- ctrl-f JEFFREY -->
 <!-- ?? tags, email, ids -->
 
@@ -27,21 +27,6 @@
             confirmBox.show();
         }
     </script>
-<!--     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script> -->
-  
-<!--     <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyDmsqDhU4pcWMscll3Ep4Isb99C91NBzWw",
-        authDomain: "prometheus-70c6e.firebaseapp.com",
-        databaseURL: "https://prometheus-70c6e.firebaseio.com",
-        projectId: "prometheus-70c6e",
-        storageBucket: "prometheus-70c6e.appspot.com",
-        messagingSenderId: "678743146036"
-      };
-      firebase.initializeApp(config);
-    </script> -->
-
     <style>
         .ui-content {
             /*font-family: Algerian;*/
@@ -355,6 +340,7 @@
                 <bold> <p id="down"></p> </bold>
             </h3>
             <p><a href="#schedule" data-role="button" data-transition="flip" class="button1">My Schedule</a></p> 
+            <p><a href"tel:60733637" data-role="button" data-transition="flip" class="button1"><i class="fa fa-phone"></i> EMERGENCY CALL</a></p>
 
                 <script>
                 // SET DATE TIME JEFFREY
