--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <bold> <p id="down"></p> </bold>
             </h3>
             <p><a href="#schedule" data-role="button" data-transition="flip" class="button1">My Schedule</a></p> 
-            <a href"tel:60733637" class="button1"><i class="fa fa-phone"></i> EMERGENCY CALL</a>
+            <a href="tel:60733637" class="button1"><i class="fa fa-phone"></i> EMERGENCY CALL</a>
 
                 <script>
                 // SET DATE TIME JEFFREY
