--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
          #confirm .message {
             text-align: left;
          }
+        
+        #shut {
+            background-color: #B22222 !important;
+            border-color: #B22222 !important;
+        }
     </style>
 </head>
 
@@ -340,8 +345,7 @@
                 <bold> <p id="down"></p> </bold>
             </h3>
             <p><a href="#schedule" data-role="button" data-transition="flip" class="button1">My Schedule</a></p> 
-            <a href="tel:60733637" class="button1"><i class="fa fa-phone"></i> EMERGENCY CALL</a>
-
+            <a href="tel:60733637" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i> EMERGENCY CALL</a>
                 <script>
                 // SET DATE TIME JEFFREY
                 var countDownDate = new Date("Jan 18, 2019 16:10:00").getTime();
