--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                     <br/>
                     <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                    <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+                    <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
                 </form>
                 <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
             </div>
@@ -470,7 +470,7 @@
             <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
             <br/>
             <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-            <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+            <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
         </form>
         <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
     </div>
@@ -555,7 +555,7 @@
             <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
             <br/>
             <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-            <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+            <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
         </form>
         <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
     </div>
@@ -622,7 +622,7 @@
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter </button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips </button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
@@ -659,7 +659,7 @@
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
@@ -708,7 +708,7 @@
                     <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                     <br/>
                     <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                    <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+                    <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
                 </form>
                 <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
             </div>
@@ -757,7 +757,7 @@
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter </button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips </button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
@@ -821,7 +821,7 @@
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
@@ -918,7 +918,7 @@
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter </button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips </button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
@@ -1107,7 +1107,7 @@
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
@@ -1226,7 +1226,7 @@
 <a href="mailto:prometheuscnn@gmail.com">
 prometheuscnn@gmail.com</a>
 <br/>
-                <p> Last Edited on 2019-04-25 </p> <!-- JEFFREY -->
+                <p> Last Edited on 2019-01-18 </p>
         </div>
         <div data-role="footer">
             <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
@@ -1238,7 +1238,7 @@ prometheuscnn@gmail.com</a>
                 <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
                 <br/>
                 <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe to Newsletter</button>
+                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
             </form>
             <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
         </div>
