--- a/index.html
+++ b/index.html
@@ -27,7 +27,176 @@
             confirmBox.show();
         }
     </script>
+
+
+
+    <script>
+      // Create a "close" button and append it to each list item
+      var myNodelist = document.getElementsByTagName("LI");
+      var i;
+      for (i = 0; i < myNodelist.length; i++) {
+        var span = document.createElement("SPAN");
+        var txt = document.createTextNode("\u00D7");
+        span.className = "close";
+        span.appendChild(txt);
+        myNodelist[i].appendChild(span);
+      }
+
+      // Click on a close button to hide the current list item
+      var close = document.getElementsByClassName("close");
+      var i;
+      for (i = 0; i < close.length; i++) {
+        close[i].onclick = function() {
+          var div = this.parentElement;
+          div.style.display = "none";
+        }
+      }
+
+      // Add a "checked" symbol when clicking on a list item
+      var list = document.querySelector('ul');
+      list.addEventListener('click', function(ev) {
+        if (ev.target.tagName === 'LI') {
+          ev.target.classList.toggle('checked');
+        }
+      }, false);
+
+      // Create a new list item when clicking on the "Add" button
+      function newElement() {
+        var li = document.createElement("li");
+        var inputValue = document.getElementById("myInput").value;
+        var t = document.createTextNode(inputValue);
+        li.appendChild(t);
+        if (inputValue === '') {
+          alert("You must write something!");
+        } else {
+          document.getElementById("myUL").appendChild(li);
+        }
+        document.getElementById("myInput").value = "";
+
+        var span = document.createElement("SPAN");
+        var txt = document.createTextNode("\u00D7");
+        span.className = "close";
+        span.appendChild(txt);
+        li.appendChild(span);
+
+        for (i = 0; i < close.length; i++) {
+          close[i].onclick = function() {
+            var div = this.parentElement;
+            div.style.display = "none";
+          }
+        }
+      }
+</script>
+
     <style>
+      .nadir {
+        margin: 0;
+        min-width: 250px;
+      }
+
+      .sizingg * {
+        box-sizing: border-box;
+      }
+
+      .hi {
+        margin: 0;
+        padding: 0;
+      }
+
+      .hi {
+        cursor: pointer;
+        position: relative;
+        padding: 12px 8px 12px 40px;
+        list-style-type: none;
+        background: #eee;
+        font-size: 18px;
+        transition: 0.2s;
+        
+        /* make the list items unselectable */
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      .hi:nth-child(odd) {
+        background: #f9f9f9;
+      }
+
+      .hi:hover {
+        background: #ddd;
+      }
+
+      .hi.checked {
+        background: #888;
+        color: #fff;
+        text-decoration: line-through;
+      }
+
+      .hi.checked::before {
+        content: '';
+        position: absolute;
+        border-color: #fff;
+        border-style: solid;
+        border-width: 0 2px 2px 0;
+        top: 10px;
+        left: 16px;
+        transform: rotate(45deg);
+        height: 15px;
+        width: 7px;
+      }
+
+      .close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 12px 16px 12px 16px;
+      }
+
+      .close:hover {
+        background-color: #f44336;
+        color: white;
+      }
+
+      #myDIV {
+        background-color: #f44336;
+        padding: 30px 40px;
+        color: white;
+        text-align: center;
+      }
+
+      #myDIV:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+
+      #myInput {
+        margin: 0;
+        border: none;
+        border-radius: 0;
+        width: 75%;
+        padding: 10px;
+        float: left;
+        font-size: 16px;
+      }
+
+      .addBtn {
+        padding: 10px;
+        width: 25%;
+        background: #d9d9d9;
+        color: #555;
+        float: left;
+        text-align: center;
+        font-size: 16px;
+        cursor: pointer;
+        transition: 0.3s;
+        border-radius: 0;
+      }
+
+      .addBtn:hover {
+        background-color: #bbb;
+      }
         .ui-content {
             /*font-family: Algerian;*/
             background-color: #FFF !important;
@@ -147,10 +316,7 @@
             height: 50px;
             width: 50px;
         }
-        /*#form2.ui-input-text{
-          height: 500px;
-          width: 50%;
-        }*/
+
         #subscribe {
             margin: 2em auto !important;
             display: block !important;
@@ -483,81 +649,25 @@
 
 
 <div data-role="page" id="schedule1">
-    <div data-role="header">
-    </div>
     <div role="main" class="ui-content">
-            <h2 class="green1" align="center">My Schedule</h2>
-                <div class="month">      
-                    <ul>
-                        <li class="prev">&#10094;</li>
-                        <li class="next">&#10095;</li>
-                        <li>
-                            January<br>
-                            <span style="font-size:25px">2019</span>
-                        </li>
-                    </ul>
-                </div>
-                <ul class="weekdays">
-                    <li>Su</li>
-                    <li>Mo</li>
-                    <li>Tu</li>
-                    <li>We</li>
-                    <li>Th</li>
-                    <li>Fr</li>
-                    <li>Sa</li>
-                </ul>
-                <ul class="days">
-                    <li></li>
-                    <li></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">1</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">2</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">3</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">4</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">5</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">6</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">7</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">8</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">9</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">10</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">11</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">12</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">13</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">14</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">15</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">16</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">17</a></li>
-                    <li><span class="active"><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">18</span></a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">19</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">20</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">21</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">22</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">23</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">24</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">25</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">26</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">27</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">28</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">29</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">30</a></li>
-                    <li><a href="#" onClick="MyWindow=window.open('https://chinglamchoi.github.io/project_health/#schedule1', 'MyWindow', 'width=600, height=300'); return false;">31</a></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-                <br>
-                <br>
-    </div>
-    <div data-role="footer">
-        <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
-        <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
-        <a href="#contact" data-role="button" data-transition="flip" class="button2">Contact Us</a>                 
-        <a href="#credits" data-role="button" data-transition="flip" class="button2">Credits</a>
-        <form class="form2" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
-            <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
-            <br/>
-            <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-            <button id="subscribe" type="submit">Subscribe for Healthy Living Tips</button>
-        </form>
-        <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
+        <h2 class="green1" align="center">My Schedule</h2>
+        <div class = "nadir">
+          <div id="myDIV">
+            <h2 style="margin:5px">My To Do List</h2>
+            <div class="sizingg">
+              <input type="text" id="myInput" placeholder="Title...">
+              <span onclick="newElement()" class="addBtn">Add</span>
+            </div>
+          </div>
+          <ul id="myUL" class = "hi">
+            <li class = "hi">Hit the gym</li>
+            <li class="hi">Pay bills</li>
+            <li class = "hi">Meet George</li>
+            <li class = "hi">Buy eggs</li>
+            <li class = "hi">Read a book</li>
+            <li class = "hi">Organize office</li>
+          </ul>
+        </div>
     </div>
 </div>
 
